--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,5 @@
         tools:context=".MainActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_container"
-        android:name="it.fox.geofencepoc.MapFragment"/>
+        android:id="@+id/fragment_container" />
 </LinearLayout>
