--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="@string/save"
             app:layout_constraintRight_toRightOf="@+id/mapView"
             app:layout_constraintBottom_toBottomOf="@+id/mapView" />
 
